FCREPO-1168, FCREPO-1089, FCREPO-1090 - Pool DocumentBuilders and non-validating SAXParsers where possible - add a convenience method to XmlTransformUtility - Upgrade to Apache Commons Pool 1.6
Conflicts:
	fcrepo-common/pom.xml
	fcrepo-common/src/main/java/org/fcrepo/utilities/TimestampedCacheEntry.java
	fcrepo-common/src/main/java/org/fcrepo/utilities/XmlTransformUtility.java
	fcrepo-installer/src/main/assembly/fedora-home.xml
	fcrepo-security/fcrepo-security-jaas/src/main/java/org/fcrepo/server/security/jaas/util/DataUtils.java
	fcrepo-security/fcrepo-security-pdp/src/main/java/org/fcrepo/server/security/xacml/util/DataFileUtils.java
	fcrepo-server/src/main/java/org/fcrepo/server/Server.java
	fcrepo-server/src/main/java/org/fcrepo/server/management/DefaultManagement.java
	fcrepo-server/src/main/java/org/fcrepo/server/rest/BaseRestResource.java
	fcrepo-server/src/main/java/org/fcrepo/server/security/PolicyFinderModule.java
	fcrepo-server/src/main/java/org/fcrepo/server/security/PolicyParser.java
	fcrepo-server/src/main/java/org/fcrepo/server/storage/DOReaderCache.java
	fcrepo-server/src/main/java/org/fcrepo/server/storage/translation/ConvertObjectSerialization.java
	fcrepo-server/src/main/java/org/fcrepo/server/storage/translation/FOXMLDODeserializer.java
	fcrepo-server/src/main/java/org/fcrepo/server/storage/translation/METSFedoraExtDODeserializer.java
	fcrepo-server/src/main/java/org/fcrepo/server/validation/DOValidatorSchematron.java
	fcrepo-server/src/main/java/org/fcrepo/server/validation/DOValidatorXMLSchema.java
	pom.xml